--- a/packages/gatsby-plugin-bluewings/package.json
+++ b/packages/gatsby-plugin-bluewings/package.json
@@ -16,13 +16,12 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@mdx-js/tag": "^0.20.3",
+    "classnames": "^2.2.6",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-remark-smartypants": "^2.1.21",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "remark-slug": "^5.1.2",
     "tailwindcss": "^1.2.0"
   },
@@ -43,5 +42,9 @@
     "rollup-plugin-pug-as-jsx": "^1.0.9",
     "rollup-plugin-typescript2": "^0.26.0",
     "typescript": "^3.8.2"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
