--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "packages": [
-    "packages/*",
-    "website"
-  ],
-  "version": "0.0.0"
+  "packages": ["packages/*", "website"],
+  "version": "0.1.0"
 }
