--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "lerna": "^3.19.0",
     "prettier": "^1.19.1"
   },
+  "scripts": {
+    "start": "lerna run start --parallel"
+  },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.7",
-    "@mdx-js/react": "^1.5.7",
-    "gatsby-plugin-mdx": "^1.0.73"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
