--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-blog-theme",
+  "name": "website",
   "private": true,
   "version": "0.0.1",
   "scripts": {
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "gatsby": "^2.19.7",
-    "gatsby-plugin-bluewings": "^1.0.0",
+    "gatsby-plugin-bluewings": "^0.1.0",
     "gatsby-theme-blog": "^1.2.35",
-    "gatsby-theme-waves": "^0.1.5",
+    "gatsby-theme-waves": "^0.1.5"
+  },
+  "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
