--- a/packages/gatsby-plugin-bluewings/package.json
+++ b/packages/gatsby-plugin-bluewings/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-plugin-bluewings",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": {
     "name": "Sung Won Cha",
     "email": "mygenie3@naver.com"
@@ -27,6 +27,7 @@
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-remark-smartypants": "^2.1.21",
+    "react-use": "^13.26.2",
     "remark-slug": "^5.1.2",
     "tailwindcss": "^1.2.0"
   },
