--- a/packages/gatsby-plugin-bluewings/tsconfig.json
+++ b/packages/gatsby-plugin-bluewings/tsconfig.json
@@ -1,6 +1,22 @@
 {
-  "extends": "../../tsconfig",
   "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
     "rootDir": "./src",
     "outDir": "./dist"
   },
