--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "lerna run start --parallel"
   },
   "dependencies": {
+    "gatsby-plugin-sass": "^2.1.29",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
