--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gatsby": "^2.19.21",
     "gatsby-plugin-bluewings": "^0.2.2",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-theme-blog": "^1.2.35",
     "intersection-observer": "^0.7.0",
     "node-sass": "^4.13.1",
