--- a/packages/gatsby-plugin-bluewings/package.json
+++ b/packages/gatsby-plugin-bluewings/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-plugin-bluewings",
-  "version": "0.3.18",
+  "version": "0.3.19",
   "author": {
     "name": "Sung Won Cha",
     "email": "mygenie3@naver.com"
@@ -33,6 +33,7 @@
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-remark-smartypants": "^2.1.21",
+    "gatsby-remark-vscode": "^2.0.2",
     "intersection-observer": "^0.7.0",
     "ptz-i18n": "^1.0.0",
     "ramda": "^0.27.0",
