--- a/website/package.json
+++ b/website/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "gatsby": "^2.19.21",
-    "gatsby-plugin-bluewings": "^0.3.25",
+    "gatsby-plugin-bluewings": "^0.3.26",
     "gatsby-theme-blog": "^1.3.7",
     "node-sass": "^4.13.1",
+    "parse-numeric-range": "0.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
